<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_intro"
    >

    <View
        android:id="@+id/view2"
        android:layout_width="297dp"
        android:layout_height="484dp"
        android:alpha="0.65"
        android:background="@drawable/view_cadastro"
        tools:layout_editor_absoluteX="56dp"
        tools:layout_editor_absoluteY="69dp">

    </View>

    <TextView
        android:id="@+id/textCadastro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cadastro"
        android:textSize="34sp"
        android:visibility="visible"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="90dp"
        tools:layout_editor_absoluteY="99dp" />

    <TextView
        android:id="@+id/textCadastroRestaurante"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/restaurante"
        android:textSize="34sp"
        android:visibility="visible"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="90dp"
        tools:layout_editor_absoluteY="144dp" />

    <EditText
            android:id="@+id/inputEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/dig_email"
            android:inputType="textEmailAddress"
            tools:layout_editor_absoluteX="90dp"
            tools:layout_editor_absoluteY="249dp"
            tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/inputSenha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/dig_senha"
        android:inputType="textPassword"
        android:typeface="normal"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="90dp"
        tools:layout_editor_absoluteY="307dp" />

    <EditText
            android:id="@+id/inputNome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/dig_nome"
            android:inputType="textPersonName"
            tools:layout_editor_absoluteX="90dp"
            tools:layout_editor_absoluteY="189dp"
            tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/botaoCadastrar"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@drawable/botao_cadastro"
        android:text="Cadastrar"
        android:textAllCaps="false"
        android:textColor="#F5E6C2"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="95dp"
        tools:layout_editor_absoluteY="391dp" />

    <TextView
            android:id="@+id/textViewComCadastro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:text="@string/com_conta"
            android:textStyle="italic"
            tools:layout_editor_absoluteX="90dp"
            tools:layout_editor_absoluteY="473dp"
            tools:ignore="MissingConstraints" />

</android.support.constraint.ConstraintLayout>